graphQL_application_example/kubernetes/graphql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
  namespace: graphql-example
  labels:
    app: graphql

# Service Specification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql
  template:
    # Configuration inside configuration of Pod
    metadata:
      labels:
        app: graphql
    spec:
      containers:
        - name: graphql
          image: someshdokerbox/graphql-boiler-plate
          ports:
            - containerPort: 8080
