graphQL_application_example/kubernetes/graphql/virtual_service-nginx.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-nginx
spec:
  hosts:
    - "*"
  gateways:
    - service-gateway
  http:
    - match:
        - uri:
            exact: /nginx
      rewrite:
          uri: /
      route:
        - destination:
            port:
              number: 9090
            host: nginx-service.default.svc.cluster.local
